--- a/midterm/pages/module.html
+++ b/midterm/pages/module.html
@@ -1,13 +1,14 @@
 
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="Aiden Coding Project" />
     <meta name="keywords" content="simple #1, template, simpletemplates.org" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
     <title>Aiden Coding Project</title>
-    <script src="js/style.js" defer></script>
+    <script src="/index.js" defer></script>
   </head>
   <body>
     <div id="wrap">
@@ -61,91 +62,73 @@
         <ul class="module__assignments">
           <!-- Copy and Past the entire list item for however many assignments you have to put. -->
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 1 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-Web-Dev/recipes/index.html"
               target="_blank"
               >Link to Assignment</a
             >
           </li>
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 2 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-WebD/m02/index.html"
               target="_blank"
               >Link to Assignment</a
             >
           </li>
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 3 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-WebD/M03%20Assignment/index.html"
               target="_blank"
               >Link to Assignment</a
             >
           </li>
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 4 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-WebD/M04/index.html"
               target="_blank"
               >Link to Assignment</a
             >
           </li>
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 5 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-WebD/M05/index.html"
               target="_blank"
               >Link to Assignment</a
             >
           </li>
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 7 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-WebD/m07/index.html"
               target="_blank"
               >Link to Assignment</a
             >
           </li>
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 8 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-WebD/m08/index.html"
               target="_blank"
               >Link to Assignment</a
             >
           </li>
           <li>
-            <span>Name of Assignment</span>
+            <span>Module 9 Assignment</span>
             <br />
             <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
-              target="_blank"
-              >Link to Assignment</a
-            >
-          </li>
-          <li>
-            <span>Name of Assignment</span>
-            <br />
-            <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
-              target="_blank"
-              >Link to Assignment</a
-            >
-          </li>
-          <li>
-            <span>Name of Assignment</span>
-            <br />
-            <a
-              href="https://www.google.com/search?q=lebron+james&oq=lebron&gs_lcrp=EgZjaHJvbWUqDAgAECMYJxiABBiKBTIMCAAQIxgnGIAEGIoFMhIIARAuGBQYgwEYhwIYsQMYgAQyBggCEEUYOTIPCAMQABgUGIcCGLEDGIAEMgoIBBAAGLEDGIAEMgoIBRAAGLEDGIAEMgYIBhBFGDwyBggHEEUYPKgCALACAA&sourceid=chrome&ie=UTF-8"
+              href="https://aidengandhi.github.io/Intro-to-WebD/m09/index.html"
               target="_blank"
               >Link to Assignment</a
             >
