--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,38 +18,38 @@
 
       <div id="topmenu">
         <ul id="nav">
-          <li><a href="midterm/index.html" onclick="loadContent('home')">Home</a></li>
+          <li><a href="/index.html" onclick="loadContent('home')">Home</a></li>
           <li>
-            <a href="pages/about.html" onclick="loadContent('about')">About</a>
+            <a href="/pages/about.html" onclick="loadContent('about')">About</a>
           </li>
           <li>
-            <a href="pages/coursework.html" onclick="loadContent('coursework')"
+            <a href="/pages/coursework.html" onclick="loadContent('coursework')"
               >Coursework</a
             >
           </li>
           <li>
-            <a href="pages/artifacts.html" onclick="loadContent('artifacts')"
+            <a href="/pages/artifacts.html" onclick="loadContent('artifacts')"
               >Artifacts</a
             >
           </li>
           <li>
-            <a href="pages/module.html" onclick="loadContent('module')"
+            <a href="/pages/module.html" onclick="loadContent('module')"
               >Module</a
             >
           </li>
 
           <li>
-            <a href="pages/animation.html" onclick="loadContent('Animation')"
+            <a href="/pages/animation.html" onclick="loadContent('Animation')"
               >Animation</a
             >
           </li>
           <li>
-            <a href="pages/creative.html" onclick="loadContent('creative')"
+            <a href="/pages/creative.html" onclick="loadContent('creative')"
               >Creative</a
             >
           </li>
           <li>
-            <a href="pages/contact.html" onclick="loadContent('contact')"
+            <a href="/pages/contact.html" onclick="loadContent('contact')"
               >Contact</a
             >
           </li>
@@ -59,10 +59,10 @@
       <div id="content">
         <h2>Welcome to My Coding Portfolio!</h2>
         <p>
-          This my coding portfolio for blah blah that showcases my coursworks,
-          module assignments, artifacts, and allows you to contact me!
+          This my coding final for Web Design it showcases my ability to use HTML, javascript, and CSS through the website and my coursworks,
+          module assignments, artifacts, as well as allowing you to contact me!
         </p>
-        <p>I created this portfolio (date) because (why)</p>
+        <p>I created this project because well its my final</p>
       </div>
 
       <div class="clear"></div>
